Cambios en la libreria de sellado, generación key base64, cadena original y pruebas unitarias